<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical">

    <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
        android:id="@+id/tv_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/forgot_password"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_stroke_white_border">

        <com.mxi.android.salarynotification.widget.EditTextMyQuestrialRegular
            android:id="@+id/et_emp_id"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:hint="@string/employment_id"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textDirection="rtl" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/et_stroke_white_border">

        <com.mxi.android.salarynotification.widget.EditTextMyQuestrialRegular
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorTransparent"
            android:hint="@string/hint_username"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:singleLine="true"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            android:textDirection="rtl" />
    </LinearLayout>

    <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
        android:id="@+id/tv_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="20dp"
        android:background="@drawable/btn_solid_green"
        android:gravity="center"
        android:text="@string/submit"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorWhite" />
</LinearLayout>
