<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context="com.mxi.android.salarynotification.activity.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2.2"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:src="@mipmap/ic_logo" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
                android:id="@+id/tv_last_reached_salary"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="20dp"
                android:drawableRight="@mipmap/salary"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/salary"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textDirection="rtl" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
                android:id="@+id/tv_search_and_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="20dp"
                android:drawableRight="@mipmap/search"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/search"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textDirection="rtl" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
                android:id="@+id/tv_share_the_application"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="20dp"
                android:drawableRight="@mipmap/share"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/share"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textDirection="rtl" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
                android:id="@+id/tv_export_historical_records"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="20dp"
                android:drawableRight="@mipmap/export"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/export"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textDirection="rtl" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="1">

            <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
                android:id="@+id/tv_leave_application"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="20dp"
                android:drawableRight="@mipmap/leave"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/leave"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textDirection="rtl" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1">

            <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
                android:id="@+id/tv_about_us"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:drawablePadding="20dp"
                android:drawableRight="@mipmap/about"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/about_us"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:textDirection="rtl" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
                android:id="@+id/tv_logout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/btn_solid_green"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/logout"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
