<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:orientation="vertical"
    tools:context="com.mxi.android.salarynotification.activity.SearchViewActivity">

    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:layout_weight="4"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="3">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@drawable/et_stroke_white_border"
                android:padding="8dp">

                <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
                    android:id="@+id/tv_select_year_search_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@android:drawable/arrow_down_float"
                    android:gravity="right|center"
                    android:hint="@string/select_year"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:background="@drawable/et_stroke_white_border"
                android:padding="8dp">

                <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
                    android:id="@+id/tv_select_month_search_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableLeft="@android:drawable/arrow_down_float"
                    android:gravity="right|center"
                    android:hint="@string/select_month"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="35dp"
                android:layout_weight="1"
                android:background="@drawable/btn_solid_green">

                <com.mxi.android.salarynotification.widget.TextViewQuestrialRegular
                    android:id="@+id/tv_search_search_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/select_search"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
